# conservation-guardian

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  EDUCATIONAL_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: architecture.md
examples/: basic_usage.py  budget_enforcement.py  historical_tracking.py  langchain_integration.py
src/conservation_guardian/: __init__.py  __main__.py  analyzer.py  budget.py  cli.py  detector.py  exceptions.py  profiler.py  report.py  reporter.py
src/conservation_guardian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/conservation_guardian/adapters/: __init__.py  generic.py  langchain.py  openai.py
tests/: test_cli.py  test_edge_cases.py  test_guardian.py
